--- a/README
+++ b/README
@@ -3,7 +3,7 @@ NAME
     recommended dependencies.
 
 VERSION
-    Version v0.930.0
+    Version v0.930.1
 
 SYNOPSIS
         $ cpan Task::Devel::Cover::Recommended
@@ -16,29 +16,51 @@ DESCRIPTION
 
 DEPENDENCIES
   Configure-time dependencies
-    ExtUtils::MakeMaker
+    *   ExtUtils::MakeMaker
 
   Build-time and test-time dependencies
-    ExtUtils::MakeMaker
-    Test::Differences
-    Test::More
-    Test::Warn
+    *   ExtUtils::MakeMaker
+
+    *   Test::Differences
+
+    *   Test::More
+
+    *   Test::Warn
 
   Run-time dependencies
-    Devel::Cover 0.93
-    "perl" 5.008002
-    Browser::Open
-    Digest::MD5
-    JSON::PP
-    PPI::HTML 1.07
+    *   Devel::Cover 0.93
+
+    *   "perl" 5.008002
+
+    *   Browser::Open
+
+    *   Digest::MD5
+
+    *   JSON::PP
+
+    *   PPI::HTML 1.07
+
         Devel::Cover lets you optionally pick between PPI::HTML and
         Perl::Tidy, but it will only use the former if both are installed.
 
-    Parallel::Iterator
-    Pod::Coverage 0.06
-    Pod::Coverage::CountParents
-    Storable
-    Template 2.00
+    *   Parallel::Iterator
+
+    *   Pod::Coverage 0.06
+
+    *   Pod::Coverage::CountParents
+
+    *   Storable
+
+    *   Template 2.00
+
+CAVEATS
+    Note that run-time dependencies that are only recommended by
+    Devel::Cover may not yet be installed at the time Devel::Cover is
+    tested, as there is no explicit dependency link between them and in that
+    case most CPAN clients default to install prerequisites in alphabetic
+    order. However, they will be installed when
+    Task::Devel::Cover::Recommended is, thus will be available when you
+    actually use Devel::Cover.
 
 AUTHOR
     Vincent Pit, "<perl at profvince.com>", <http://www.profvince.com>.
